samples/_failures_safe/1761291195_b4177f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02d55093.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
